# isl-diffusion

./: .gitignore  README.md  plot_training_curves.py  pyproject.toml  run_experiment.py
slurm/: evaluate.sbatch  sampler_compare.sbatch  train.sbatch
src/: config.py  data.py  engine.py  evaluate.py  model.py  sampling.py
