[project]
name = "isl-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "clean-fid>=0.1.35",
    "diffusers>=0.39.0",
    "lpips>=0.1.4",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "prdc>=0.2",
    "tensorboard>=2.21.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]
