[project]
name = "isl-diffusion"
version = "0.1.0"
description = "Class-conditional diffusion models for Indian Sign Language image generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "clean-fid>=0.1.35",
    "diffusers>=0.39.0",
    "lpips>=0.1.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "prdc>=0.2",
    "tensorboard>=2.21.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
